# pcli

./: Cargo.toml  README.md  justfile
src/: lib.rs  main.rs
src/modules/: hardware.rs  mod.rs  shell.rs  wallpaper.rs  weather.rs  wm.rs
