[package]
name = "pcli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pdaemon"
path = "src/bin/daemon.rs"

[[bin]]
name = "pcli"
path = "src/bin/pcli.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
daemonize = "0.5.0"
gfxinfo = "0.1.2"
niri-ipc = "25.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.37.2"
