[package]
name = "pcli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pdaemon"
path = "src/bin/daemon.rs"

[[bin]]
name = "pcli"
path = "src/bin/pcli.rs"

[dependencies]
miette = { version = "7.6.0", features = ["fancy"] }
clap = { version = "4.5.54", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
daemonize = "0.5.0"
gfxinfo = "0.1.2"
niri-ipc = "25.11.0"
serde_json = "1.0"
sysinfo = "0.37.2"
kdl = "6.5.0"
urlencoding = "2.1.3"
reqwest = { version = "0.13.1", features = ["blocking"] }
